# CryptoFiles

./: CMakeLists.txt  CreateKeysForm.qml  CustomButton.qml  DecryptFileForm.qml  EncryptFileForm.qml  Main.qml  README.md  app.rc  cryptoutils.cpp  cryptoutils.h  icon.rc  images.qrc  main.cpp  workwithencryption.cpp  workwithencryption.h
